remove deprecated "new Integer(int)"